--- a/src/components/Landing/Form.css
+++ b/src/components/Landing/Form.css
@@ -1,7 +1,7 @@
 .form-container {
     width: 360px;
     background-color: white;
-    margin: 1em auto;
+    margin: 2em auto 1em;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     padding: 10px;
   }
