Avances en las vistas de Clases

--- a/src/components/Clases/index.html
+++ b/src/components/Clases/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="indexx.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>CLASES</title>
 </head>
 <body>
@@ -16,12 +18,44 @@
             <h4 class="navbar-element">REGISTRO/LOGIN</h4>
         </div>
     </div>
-    <img src="1.jpg">
+    <img src="1.jpg" alt="..."/>
     <div class="main-div">
         <h1 class="custon-title">CLASES PERSONALIZADAS</h1>
         <p class="description"> En Gimnasio Musculito contamos con clases adaptadas a tus necesidades y rutinas hechas a tu medida!</p>
     </div>
-    <div class="contents">
+   <div class="all-cards">
+       <div class="card-container-custom">
+           <div class="card" style="width: 18rem;">
+               <img src="zumba.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                   <h5 class="card-title">ZUMBA</h5>
+                   <p class="card-text">Zumba es la disciplina del presente. Diversión, salud y estar en forma, TODO combinado con la mejor de las ondas.</p>
+                   <a href="#" class="btn btn-primary">Lunes- Miércoles y Viernes: 18:00 hs.</a>
+               </div>
+           </div>
+       </div>
+       <div class="card-container-custom">
+           <div class="card" style="width: 18rem;">
+               <img src="zumba.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                   <h5 class="card-title">BODY-COMBAT</h5>
+                   <p class="card-text">Body-Combat es la disciplina del presente. Diversión, salud y estar en forma, TODO combinado con la mejor de las ondas.</p>
+                   <a href="#" class="btn btn-primary">Lunes- Miércoles y Viernes: 16:00 hs.</a>
+               </div>
+           </div>
+       </div>
+       <div class="card-container-custom">
+           <div class="card" style="width: 18rem;">
+               <img src="zumba.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                   <h5 class="card-title">TAE-KWON-DO</h5>
+                   <p class="card-text">Tae-Kwon-Do es la disciplina del presente. Diversión, salud y estar en forma, TODO combinado con la mejor de las ondas.</p>
+                   <a href="#" class="btn btn-primary">Lunes- Miércoles y Viernes: 14:00 hs.</a>
+               </div>
+           </div>
+       </div>
+   </div>
+    <!--<div class="contents">
         <h2> Contamos con clases de:</h2>
         <div class="row-image-desc">
             <img src="zumba.jpg" class="picture">
@@ -32,6 +66,6 @@
         <h3 class="schedule descriptive-text">
             Lunes- Miércoles y Viernes: 18:00 hs.
         </h3>
-    </div>
+    </div>-->
 </body>
 </html>
